@@ -3,6 +3,6 @@ DIST 99561-filelight-1.9rc3.tgz 93481 RMD160 26112c392f0652a8eb66c4afedb9234cf90
 DIST filelight-1.0-i18n-20070422.tar.bz2 986141 RMD160 e676c7c208123b2209514d3b9406540533103715 SHA1 1f50270d851ae7578b696f1e9737be82ad06a424 SHA256 1c3b973b3dc70e08a83990a737afd15aa653029202270992940b2a23705f02fc
 DIST filelight-1.0.tar.bz2 530449 RMD160 67ce0deb03f14cc280f7471156c4f2a3135ebb5e SHA1 2a4644c598dfcc408af0af65e655e2525494708d SHA256 0743d49e60a1b2fa7b54ecdc13fb15c7a6fb144169ba272bc566a18022c245d6
 EBUILD filelight-1.0-r2.ebuild 1889 RMD160 f4110d403fb457c4c5c72c5cf2fcb269906bbfd2 SHA1 25537e8121156c0337a82bf44e4a8fce6e217e4b SHA256 b8357e8ecd0bad83503642790591acbcfd7dc1d5dd4691ac942e98e503199d47
-EBUILD filelight-1.9_rc3.ebuild 701 RMD160 532b989675ae08c6a22cdbae807daf7ea9acd457 SHA1 ed5ac3d98b73a2302f74461927639705dd6c1e93 SHA256 37c941ddcf400e1b81ef6c8aec0650fc450c388ae2585aa5e6079c54fab54d4d
-MISC ChangeLog 6772 RMD160 c94b78d19b97ff9b44f869fae8c29ed1480e53a6 SHA1 21a2332aaf66ead6492a78dcac695a9218362f3b SHA256 8fe7fe9b9b4c7f0225dcc76b5e6fda915e0b110e27f538d0568c1a5cf6ed9f6f
+EBUILD filelight-1.9_rc3.ebuild 700 RMD160 e18a31263e77288ee56c7bd74302d1a8914b89aa SHA1 35e92467713f8d06f516d59078792c0ea1f53adb SHA256 632477e13315ab4cebbb1c67b7b09fc865723edd8ac5ab02cc02291fda9408cd
+MISC ChangeLog 6887 RMD160 cd4180ca46c7d32c528ca3c766398fed36fbd531 SHA1 d81dba51987b8dfa0b6150abafe9153eb7316258 SHA256 c36a16dea4be6bb5bcb70ff13bd039b78ed1bb95b2b7d0dc552194f68c517fca
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
