@@ -1,6 +1,10 @@
 # ChangeLog for kde-misc/filelight
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.37 2009/10/12 09:48:32 abcd Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.38 2009/10/24 23:20:09 ssuominen Exp $
+
+  24 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  filelight-1.9_rc3.ebuild:
+  amd64 stable wrt #290415
 
   12 Oct 2009; Jonathan Callen <abcd@gentoo.org> filelight-1.9_rc3.ebuild:
   Set KDE_MINIMAL to unbreak hppa, ppc, and ppc64
